# abstract-algebra-4th-sem

./: .gitignore  CMakeLists.txt  main.cpp  utils.h
AdditionalPolynomialOperations/: AdditionalPolynomialOperations.h
Berlekemps_algorithm/: Berlekemps_algorithm.cpp
BigInt/: BigInt.cpp  BigInt.h  bigmath.h
CountRoots/: CountRoots.h
CyclicPolynomial/: CyclicPolynomial.cpp  CyclicPolynomial.h
GaloisField/: GaloisField.h  Polynomial.h  Vector.h
IrreduciblePolynomialOrder/: IrreduciblePolynomialOrder.cpp
ModArithmetic/: ModArithmetic.h
